k8s/istio-peerauthentication.yaml
# Istio PeerAuthentication 
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: soiree
spec:
  mtls:
    mode: STRICT
---
# Istio AuthorizationPolicy 
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-intra-namespace
  namespace: soiree
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["soiree", "istio-system"]
    - from:
        - source:
            namespaces: ["istio-system"]
